Updated the website details of keynote speaker

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <br><br><br>
             <marquee>
 <!--                <p class="glow">NEW</p>-->
+                Submission of Abstracts for Workshop has been closed &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 Opportunity to publish at Post-Workshop proceedings &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 Participation certificates for all authors &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 Scholarship and additional support available
@@ -156,7 +157,7 @@
                             <h5>  The workshop includes invited talks from eminent researchers and practitioners and a panel discussion. </h5>
 
                             <h6> Date: 04<sup>th</sup> December 2022 (Sunday)</h6>
-                            <h6>Venue:  <b>KRB Ground Floor, Meeting Room, IIIT Hyderabad</b></h6>
+                            <h6>Venue:<b>KRB Ground Floor, Meeting Room, IIIT Hyderabad</b></h6>
                         </div>
                         <div class="workshop_discussion text-center" style="padding-top: 5%" >
                             <table>
@@ -197,7 +198,9 @@
                                     </tr>
                                     <tr>
                                         <td> 02:00 pm IST- 03:00 pm IST </td>
-                                        <td> Keynote Session by <br> <b>Balaji Krishnamurthy</b> <br>Senior Principal Scientist, Adobe </td>
+                                        <td> Keynote Session by <br> <b>Balaji Krishnamurthy</b> <br>
+                                            Senior Principal Scientist,<br>
+                                            Media and Data Science Research Lab, Adobe </td>
                                     </tr>
                                     <tr>
                                         <td> 03:00 pm IST- 04:00 pm IST </td>
@@ -218,6 +221,9 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase mb-5">Submissions</h2>
+            </div>
+            <div class="text-center">
+                <h4 class="section-heading text-uppercase mb-5">Abstract Submissions are closed now!!</h4>
             </div>
             <div class="masthead-subheading"><b>Instructions for Submission</b></div>
             <br>
